--- a/IllusTrip3D.ipynb
+++ b/IllusTrip3D.ipynb
@@ -168,7 +168,7 @@
         "#@title Load inputs\n",
         "\n",
         "#@markdown **Content** (either type a text string, or upload a text file):\n",
-        "content = \"\" #@param {type:\"string\"}\n",
+        "content = \"blue cyberpunk dog, rococo art\" #@param {type:\"string\"}\n",
         "upload_texts = False #@param {type:\"boolean\"}\n",
         "\n",
         "#@markdown **Style** (either type a text string, or upload a text file):\n",
@@ -275,7 +275,7 @@
         "#@markdown > Config\n",
         "method = 'RGB' #@param ['FFT', 'RGB']\n",
         "model = 'dual' #@param ['dual', 'ViT-B/16', 'ViT-B/32', 'RN101', 'RN50x16', 'RN50x4', 'RN50']\n",
-        "aesthetic =  2#@param {type:\"number\"}\n",
+        "aesthetic =  1#@param {type:\"number\"}\n",
         "\n",
         "# Default settings\n",
         "if method == 'RGB':\n",
@@ -377,7 +377,7 @@
         "**`FFT`** method uses inverse FFT representation of the image. It allows flexible motion, but is either blurry (if smoothed) or noisy (if not).  \n",
         "**`RGB`** method directly optimizes image pixels (without FFT parameterization). It's more clean and stable, when zooming in.  \n",
         "There are few choices for CLIP `model` (results do vary!). Dual (ViT-B/32 + ViT-B/16) usually works best. Otherwise, I prefer ViT's for consistency.  \n",
-        "`aesthetic` enforces overall cuteness (try various values!). May be set negative.  \n",
+        "`aesthetic` enforces overall cuteness (try various values!). May be  negative.  \n",
         "\n",
         "**`steps`** defines the length of animation per text line (multiply it to the inputs line count to get total video duration in frames).  \n",
         "`frame_step` sets frequency of the changes in animation (how many frames between motion keypoints).  \n",
@@ -416,7 +416,7 @@
         "#@markdown > Training\n",
         "samples = 200 #@param {type:\"integer\"}\n",
         "save_step = 1 #@param {type:\"integer\"}\n",
-        "learning_rate = 1. #@param {type:\"number\"}\n",
+        "learning_rate = 0.03 #@param {type:\"number\"}\n",
         "optimizer = 'adam' #@param ['adam', 'adam_custom', 'adamw', 'adamw_custom']\n",
         "\n",
         "#@markdown > Tricks\n",
@@ -450,7 +450,8 @@
         "`interpolate_topics` changes the subjects smoothly, otherwise they're switched by cut, making sharper transitions.  \n",
         "\n",
         "Decrease **`samples`** if you face OOM (it's the main RAM eater), or just to speed up the process (with the cost of quality).  \n",
-        "`save_step` defines, how many optimization steps are taken between saved frames. Set it >1 for stronger image processing.   \n",
+        "`save_step` defines, how many optimization steps are taken between saved frames.  \n",
+        "Set it >1 for stronger image processing (you may want to decrease learning rate proportionally).   \n",
         "Select optimizer: `_custom` options are more stable but noisy; pure `adam` is softer, but may spill some colored blur on longer videos.  \n",
         "Negative `sharpness` may also reduce noisiness.  \n",
         "\n",
