--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -486,7 +486,7 @@
         "    img_enc_    = img_enc2      if dualmod is not None and i in dualmod_nums else img_enc\n",
         "  if len(subtract) > 0:\n",
         "    not_enc_    = not_enc2      if dualmod is not None and i in dualmod_nums else not_enc\n",
-        "  if no_text > 0:\n",
+        "  if no_text > 0 and len(text) > 0:\n",
         "    txtpic_enc_ = txt_plot_enc2 if dualmod is not None and i in dualmod_nums else txt_plot_enc\n",
         "  model_clip_   = model_clip2   if dualmod is not None and i in dualmod_nums else model_clip\n",
         "  if aesthetic != 0:\n",
