--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -95,6 +95,7 @@
         "InteractiveShell.ast_node_interactivity = \"all\"\n",
         "import ipywidgets as ipy\n",
         "from google.colab import output, files\n",
+        "output.enable_custom_widget_manager()\n",
         "\n",
         "import warnings\n",
         "warnings.filterwarnings(\"ignore\")\n",
