weighted text inputs

--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -43,14 +43,14 @@
         "## Features \n",
         "* generates massive detailed imagery, a la deepdream \n",
         "* high resolution (up to 12K on RTX 3090)\n",
-        "* directly parameterized with [FFT](https://github.com/greentfrapp/lucent/blob/master/lucent/optvis/param/spatial.py) [Fourier] or DWT [wavelets] (no pretrained GANs)\n",
+        "* directly parameterized with [FFT](https://github.com/greentfrapp/lucent/blob/master/lucent/optvis/param/spatial.py) [Fourier] or DWT [wavelets], without pretrained GANs\n",
         "* various CLIP models (including multi-language from [SBERT](https://sbert.net))\n",
         "* starting/resuming process from saved FFT parameters or from an image\n",
         "* using [aesthetic loss](https://github.com/LAION-AI/aesthetic-predictor) \n",
         "* complex requests:\n",
-        "  * image and/or text as main prompts  \n",
+        "  * image and/or text as main prompts {with weights)  \n",
         "   (composition similarity controlled with [LPIPS](https://github.com/richzhang/PerceptualSimilarity) loss)\n",
-        "  * separate text prompts for image style and to subtract (suppress) topics\n",
+        "  * extra text prompts for image style and to subtract (suppress) topics\n",
         "  * criteria inversion (show \"the opposite\")\n"
       ]
     },
@@ -62,8 +62,9 @@
       "source": [
         "**Run the cell below after each session restart**\n",
         "\n",
-        "Mark `resume` and upload `.pt` file, if you're resuming from the saved snapshot. Or you can simply upload any image to start from.  \n",
-        "Resolution settings below will be overwritten in this case. "
+        "Mark `resume` and upload `.pt` file, if you're resuming from the saved snapshot.  \n",
+        "Or you can upload any image to start from - that is, to \"stylize\" that image.  \n",
+        "Resolution settings below will be ignored in this case. "
       ]
     },
     {
@@ -166,6 +167,7 @@
         "Type some `text` and/or upload some image to start.  \n",
         "Describe `style`, which you'd like to apply to the imagery.  \n",
         "Put to `subtract` the topics, which you would like to avoid in the result.  \n",
+        "All inputs understand syntax with weights: `goodprompt:1 | alsogoodprompt:1 | badprompt:-0.5`.  \n",
         "`invert` the whole criteria, if you want to see \"the totally opposite\".\n",
         "\n",
         "Options for non-English languages (use only one of them!):  \n",
@@ -233,8 +235,7 @@
         "Tune `decay` (compositional softness) and `sharpness`, `colors` (saturation) and `contrast` as needed.  \n",
         "\n",
         "Experimental tricks:  \n",
-        "`aug_noise` augmentation, `macro` (from 0 to 1) and `progressive_grow` (read more [here](https://github.com/eps696/aphantasia/issues/2)) may boost bigger forms, making composition less disperse.  \n",
-        "`no_text` tries to remove \"graffiti\" by subtracting plotted text prompt  \n",
+        "`aug_noise` augmentation, `macro` (from 0 to 1) and `progressive_grow` ([read more](https://github.com/eps696/aphantasia/issues/2)) may boost bigger forms, making composition less disperse.  \n",
         "`enhance` boosts training consistency (of simultaneous samples) and steps progress. good start is 0.1~0.2.  "
       ]
     },
@@ -268,7 +269,6 @@
         "save_freq = 1 #@param {type:\"integer\"}\n",
         "#@markdown > Tricks\n",
         "aug_noise = 0. #@param {type:\"number\"}\n",
-        "no_text = 0.07 #@param {type:\"number\"}\n",
         "enhance = 0. #@param {type:\"number\"}\n",
         "macro = 0.4 #@param {type:\"number\"}\n",
         "progressive_grow = False #@param {type:\"boolean\"}\n",
@@ -381,11 +381,18 @@
         "    aest2 = aesthetic_model('ViT-B/16').cuda()\n",
         "\n",
         "def enc_text(txt, model_clip=model_clip):\n",
-        "  if multilang is True:\n",
-        "    emb = model_lang.encode([txt], convert_to_tensor=True, show_progress_bar=False)\n",
-        "  else:\n",
-        "    emb = model_clip.encode_text(clip.tokenize(txt).cuda())\n",
-        "  return emb.detach().clone()\n",
+        "  embs = []\n",
+        "  for subtxt in txt.split('|'):\n",
+        "    if ':' in subtxt:\n",
+        "      [subtxt, wt] = subtxt.split(':')\n",
+        "      wt = float(wt)\n",
+        "    else: wt = 1.\n",
+        "    if multilang is True:\n",
+        "      emb = model_lang.encode([subtxt], convert_to_tensor=True, show_progress_bar=False)\n",
+        "    else:\n",
+        "      emb = model_clip.encode_text(clip.tokenize(subtxt).cuda())\n",
+        "    embs.append([emb.detach().clone(), wt])\n",
+        "  return embs\n",
         "\n",
         "if diverse != 0:\n",
         "  samples = int(samples * 0.5)\n",
@@ -425,11 +432,6 @@
         "  txt_enc = enc_text(text)\n",
         "  if dualmod is not None:\n",
         "    txt_enc2 = enc_text(text, model_clip2)\n",
-        "  if no_text > 0:\n",
-        "    txt_plot = torch.from_numpy(plot_text(text, modsize)/255.).unsqueeze(0).permute(0,3,1,2).cuda()\n",
-        "    txt_plot_enc = model_clip.encode_image(txt_plot).detach().clone()\n",
-        "    if dualmod is not None:\n",
-        "      txt_plot_enc2 = model_clip2.encode_image(txt_plot).detach().clone()\n",
         "\n",
         "if len(style) > 0:\n",
         "  print(' style:', style)\n",
@@ -487,8 +489,6 @@
         "    img_enc_    = img_enc2      if dualmod is not None and i in dualmod_nums else img_enc\n",
         "  if len(subtract) > 0:\n",
         "    not_enc_    = not_enc2      if dualmod is not None and i in dualmod_nums else not_enc\n",
-        "  if no_text > 0 and len(text) > 0:\n",
-        "    txtpic_enc_ = txt_plot_enc2 if dualmod is not None and i in dualmod_nums else txt_plot_enc\n",
         "  model_clip_   = model_clip2   if dualmod is not None and i in dualmod_nums else model_clip\n",
         "  if aesthetic != 0:\n",
         "    aest_       = aest2         if dualmod is not None and i in dualmod_nums else aest\n",
@@ -496,15 +496,16 @@
         "  out_enc = model_clip_.encode_image(img_sliced)\n",
         "\n",
         "  if len(text) > 0: # input text\n",
-        "    loss += sign * torch.cosine_similarity(txt_enc_, out_enc, dim=-1).mean()\n",
-        "    if no_text > 0:\n",
-        "      loss -= sign * no_text * torch.cosine_similarity(txtpic_enc_, out_enc, dim=-1).mean()\n",
+        "    for enc, wt in txt_enc_:\n",
+        "      loss += sign * wt * torch.cosine_similarity(enc, out_enc, dim=-1).mean()\n",
         "  if len(style) > 0: # input text - style\n",
-        "    loss += sign * 0.5 * torch.cosine_similarity(style_enc_, out_enc, dim=-1).mean()\n",
+        "    for enc, wt in style_enc_:\n",
+        "      loss += sign * wt * torch.cosine_similarity(enc, out_enc, dim=-1).mean()\n",
         "  if len(subtract) > 0: # subtract text\n",
-        "    loss -= sign * torch.cosine_similarity(not_enc_, out_enc, dim=-1).mean()\n",
+        "    for enc, wt in not_enc_:\n",
+        "      loss -= sign * wt * torch.cosine_similarity(enc, out_enc, dim=-1).mean()\n",
         "  if upload_image:\n",
-        "    loss += sign * 0.5 * torch.cosine_similarity(img_enc_, out_enc, dim=-1).mean()\n",
+        "    loss += sign * 0.7 * torch.cosine_similarity(img_enc_, out_enc, dim=-1).mean()\n",
         "  if sync > 0 and upload_image: # image composition sync\n",
         "    prog_sync = (steps - i) / steps \n",
         "    loss += prog_sync * sync * sim_loss(F.interpolate(img_out, sim_size).float(), img_in, normalize=True).squeeze()\n",
