--- a/IllusTrip3D.ipynb
+++ b/IllusTrip3D.ipynb
@@ -115,7 +115,7 @@
         "\n",
         "!pip install git+https://github.com/eps696/aphantasia\n",
         "from aphantasia.image import to_valid_rgb, fft_image, rfft2d_freqs, img2fft, pixel_image, un_rgb\n",
-        "from aphantasia.utils import basename, file_list, img_list, img_read, txt_clean, plot_text, old_torch\n",
+        "from aphantasia.utils import basename, file_list, img_list, img_read, txt_clean, plot_text\n",
         "from aphantasia.utils import slice_imgs, derivat, pad_up_to, slerp, aesthetic_model, intrl, checkout, sim_func, latent_anima\n",
         "from aphantasia import transforms\n",
         "from aphantasia.progress_bar import ProgressIPy as ProgressBar\n",
@@ -169,7 +169,7 @@
         "#@title Load inputs\n",
         "\n",
         "#@markdown **Content** (either type a text string, or upload a text file):\n",
-        "content = \"blue cyberpunk dog, rococo art\" #@param {type:\"string\"}\n",
+        "content = \"\" #@param {type:\"string\"}\n",
         "upload_texts = False #@param {type:\"boolean\"}\n",
         "\n",
         "#@markdown **Style** (either type a text string, or upload a text file):\n",
@@ -231,7 +231,8 @@
       },
       "source": [
         "**`content`** (what to draw) is your primary input; **`style`** (how to draw) is optional, if you want to separate such descriptions.  \n",
-        "If you load text file[s], the imagery will interpolate from line to line (ensure equal line counts for content and style lists, for their accordance)."
+        "If you load text file[s], the imagery will interpolate from line to line (ensure equal line counts for content and style lists, for their accordance).  \n",
+        "All text inputs understand syntax with weights, like `good prompt :1 | also good prompt :1 | bad prompt :-0.5` (within one line).  "
       ]
     },
     {
@@ -320,14 +321,14 @@
         "  dualmod = None\n",
         "\n",
         "print(' loading CLIP model..')\n",
-        "model_clip, _ = clip.load(model, jit=old_torch())\n",
+        "model_clip, _ = clip.load(model, jit=False)\n",
         "modsize = model_clip.visual.input_resolution\n",
         "xmem = {'ViT-B/16':0.25, 'RN50':0.5, 'RN50x4':0.16, 'RN50x16':0.06, 'RN101':0.33}\n",
         "if model in xmem.keys():\n",
         "  sample_decrease *= xmem[model]\n",
         "\n",
         "if dualmod is not None: # second is vit-16\n",
-        "  model_clip2, _ = clip.load('ViT-B/16', jit=old_torch())\n",
+        "  model_clip2, _ = clip.load('ViT-B/16', jit=False)\n",
         "  sample_decrease *= 0.23\n",
         "  dualmod_nums = list(range(steps))[dualmod::dualmod]\n",
         "  print(' dual model every %d step' % dualmod)\n",
@@ -417,8 +418,8 @@
         "#@markdown > Training\n",
         "samples = 200 #@param {type:\"integer\"}\n",
         "save_step = 1 #@param {type:\"integer\"}\n",
-        "learning_rate = 0.03 #@param {type:\"number\"}\n",
-        "optimizer = 'adam' #@param ['adam', 'adam_custom', 'adamw', 'adamw_custom']\n",
+        "learning_rate = 0.1 #@param {type:\"number\"}\n",
+        "optimizer = 'adam_custom' #@param ['adam', 'adam_custom', 'adamw', 'adamw_custom']\n",
         "\n",
         "#@markdown > Tricks\n",
         "aug_transform = 'fast' #@param ['fast', 'custom', 'elastic', 'none']\n",
@@ -446,18 +447,20 @@
         "id": "QYrJTb8xDm9C"
       },
       "source": [
-        "`style_power` controls the strength of the style descriptions, comparing to the main input.  \n",
+        "`style_power` controls overall strength of the style descriptions, comparing to the main input.  \n",
         "`overscan` provides better frame coverage (needed for RGB method).  \n",
         "`interpolate_topics` changes the subjects smoothly, otherwise they're switched by cut, making sharper transitions.  \n",
         "\n",
         "Decrease **`samples`** if you face OOM (it's the main RAM eater), or just to speed up the process (with the cost of quality).  \n",
-        "`save_step` defines, how many optimization steps are taken between saved frames.  \n",
-        "Set it >1 for stronger image processing (you may want to decrease learning rate proportionally).   \n",
+        "`save_step` defines how many optimization steps are taken between saved frames, \n",
+        "set it >1 for stronger image processing.  \n",
+        "**`learning_rate`** is the main driver! Decrease it for softer and lighter effects, increase for more powerful but noisy processing.  \n",
         "Select optimizer: `_custom` options are more stable but noisy; pure `adam` is softer, but may spill some colored blur on longer videos.  \n",
         "Negative `sharpness` may also reduce noisiness.  \n",
         "\n",
         "Experimental tricks:  \n",
-        "`aug_transform` applies some augmentations, which quite radically change the output of this method (and slow down the process). Try yourself to see which is good for your case. `aug_noise` augmentation [FFT only!] seems to enhance optimization with transforms.  \n",
+        "`aug_transform` applies some augmentations, which quite radically change the output of this method (and slow down the process).  \n",
+        "Try yourself to see which is good for your case. `aug_noise` augmentation [FFT only!] seems to enhance optimization with transforms.  \n",
         "`macro` boosts bigger forms.  \n",
         "`enforce` adds more details by enforcing similarity between two parallel samples.  \n",
         "`expand` boosts diversity (up to irrelevant) by enforcing difference between prev/next samples.  \n",
@@ -568,17 +571,27 @@
         "print(' using %s method, %d samples, %s optimizer' % (method, samples, optimizer))\n",
         "\n",
         "def enc_text(txt, model_clip=model_clip):\n",
-        "  if translate:\n",
-        "    txt = translator.translate(txt, dest='en').text\n",
-        "  emb = model_clip.encode_text(clip.tokenize(txt).cuda()[:77])\n",
-        "  return emb.detach().clone()\n",
+        "  if txt is None or len(txt)==0: return None\n",
+        "  embs = []\n",
+        "  for subtxt in txt.split('|'):\n",
+        "    if ':' in subtxt:\n",
+        "      [subtxt, wt] = subtxt.split(':')\n",
+        "      wt = float(wt)\n",
+        "    else: wt = 1.\n",
+        "    emb = model_clip.encode_text(clip.tokenize(subtxt).cuda()[:77])\n",
+        "    embs.append([emb.detach().clone(), wt])\n",
+        "  return embs\n",
         "\n",
         "# Encode inputs\n",
         "count = 0 # max count of texts and styles\n",
+        "if translate:\n",
+        "  texts = [tr.text for tr in translator.translate(texts)]\n",
         "key_txt_encs = [enc_text(txt) for txt in texts]\n",
         "if dualmod is not None:\n",
         "  key_txt_encs2 = [enc_text(txt, model_clip2) for txt in texts]\n",
         "count = max(count, len(key_txt_encs))\n",
+        "if translate:\n",
+        "  styles = [tr.text for tr in translator.translate(styles)]\n",
         "key_styl_encs = [enc_text(style) for style in styles]\n",
         "if dualmod is not None:\n",
         "  key_styl_encs2 = [enc_text(style, model_clip2) for style in styles]\n",
@@ -616,36 +629,34 @@
         "  if cnt == 0: return []\n",
         "  enc_1 = encs[min(num,   cnt-1)]\n",
         "  enc_2 = encs[min(num+1, cnt-1)]\n",
-        "  return slerp(enc_1, enc_2, steps)\n",
+        "  if not interpolate_topics: return [enc_1] * steps\n",
+        "  enc_pairs = []\n",
+        "  for i in range(steps):\n",
+        "    enc1_step = []\n",
+        "    if enc_1 is not None:\n",
+        "      for enc, wt in enc_1:\n",
+        "        enc1_step.append([enc, wt * (steps-i)/steps])\n",
+        "    enc2_step = []\n",
+        "    if enc_2 is not None:\n",
+        "      for enc, wt in enc_2:\n",
+        "        enc2_step.append([enc, wt * i/steps])\n",
+        "    enc_pairs.append(enc1_step + enc2_step)\n",
+        "  return enc_pairs\n",
         "\n",
         "def frame_transform(img, size, angle, shift, scale, shear):\n",
-        "  if old_torch(): # 1.7.1\n",
-        "    img = T.functional.affine(img, angle, shift, scale, shear, fillcolor=0, resample=PIL.Image.BILINEAR)\n",
-        "    img = T.functional.center_crop(img, size)\n",
-        "    img = pad_up_to(img, size)\n",
-        "  else: # 1.8+\n",
-        "    img = T.functional.affine(img, angle, shift, scale, shear, fill=0, interpolation=T.InterpolationMode.BILINEAR)\n",
-        "    img = T.functional.center_crop(img, size) # on 1.8+ also pads\n",
+        "  img = T.functional.affine(img, angle, shift, scale, shear, fill=0, interpolation=T.InterpolationMode.BILINEAR)\n",
+        "  img = T.functional.center_crop(img, size) # on 1.8+ also pads\n",
         "  return img\n",
         "\n",
         "prev_enc = 0\n",
         "def process(num):\n",
         "  global params_tmp, opt_state, params, image_f, optimizer, pbar\n",
         "\n",
-        "  if interpolate_topics:\n",
-        "    txt_encs  = get_encs(key_txt_encs,  num)\n",
-        "    styl_encs = get_encs(key_styl_encs, num)\n",
-        "    if dualmod is not None:\n",
-        "      txt_encs2  = get_encs(key_txt_encs2,  num)\n",
-        "      styl_encs2 = get_encs(key_styl_encs2, num)\n",
-        "  else:\n",
-        "    txt_encs  = [key_txt_encs[min(num,  len(key_txt_encs)-1)][0]]  * steps if len(key_txt_encs)  > 0 else []\n",
-        "    styl_encs = [key_styl_encs[min(num, len(key_styl_encs)-1)][0]] * steps if len(key_styl_encs) > 0 else []\n",
-        "    if dualmod is not None:\n",
-        "      txt_encs2  = [key_txt_encs2[min(num,  len(key_txt_encs2)-1)][0]]  * steps if len(key_txt_encs2)  > 0 else []\n",
-        "      styl_encs2 = [key_styl_encs2[min(num, len(key_styl_encs2)-1)][0]] * steps if len(key_styl_encs2) > 0 else []\n",
-        "\n",
+        "  txt_encs  = get_encs(key_txt_encs,  num)\n",
+        "  styl_encs = get_encs(key_styl_encs, num)\n",
         "  if dualmod is not None:\n",
+        "    txt_encs2  = get_encs(key_txt_encs2,  num)\n",
+        "    styl_encs2 = get_encs(key_styl_encs2, num)\n",
         "    txt_encs  = intrl(txt_encs,  txt_encs2,  dualmod)\n",
         "    styl_encs = intrl(styl_encs, styl_encs2, dualmod)\n",
         "    del txt_encs2, styl_encs2\n",
@@ -657,8 +668,8 @@
         "    glob_step = num * steps + ii # saving/transforming\n",
         "\n",
         "    # get encoded inputs\n",
-        "    txt_enc  = txt_encs[ii % len(txt_encs)].unsqueeze(0)   if len(txt_encs)  > 0 else None\n",
-        "    styl_enc = styl_encs[ii % len(styl_encs)].unsqueeze(0) if len(styl_encs) > 0 else None\n",
+        "    txt_enc  = txt_encs[ii % len(txt_encs)]   if len(txt_encs)  > 0 else None\n",
+        "    styl_enc = styl_encs[ii % len(styl_encs)] if len(styl_encs) > 0 else None\n",
         "    \n",
         "    model_clip_ = model_clip2 if dualmod is not None and ii in dualmod_nums else model_clip\n",
         "    if aesthetic != 0:\n",
@@ -682,21 +693,14 @@
         "      img_tmp = None\n",
         "\n",
         "    else: # FFT\n",
-        "      if old_torch(): # 1.7.1\n",
-        "        img_tmp = torch.irfft(params_tmp, 2, normalized=True, signal_sizes=(h,w))\n",
-        "        if DepthStrength != 0:\n",
-        "          img_tmp = depth_transform(img_tmp, depth_infer, depth_mask, size, DepthStrength, scale, trans, colors, depthdir, glob_step)\n",
-        "        img_tmp = frame_transform(img_tmp, (h,w), angle, trans, scale, shear)\n",
-        "        params_tmp = torch.rfft(img_tmp, 2, normalized=True)\n",
-        "      else: # 1.8+\n",
-        "        if type(params_tmp) is not torch.complex64:\n",
-        "          params_tmp = torch.view_as_complex(params_tmp)\n",
-        "        img_tmp = torch.fft.irfftn(params_tmp, s=(h,w), norm='ortho')\n",
-        "        if DepthStrength != 0:\n",
-        "          img_tmp = depth_transform(img_tmp, depth_infer, depth_mask, size, DepthStrength, scale, trans, colors, depthdir, glob_step)\n",
-        "        img_tmp = frame_transform(img_tmp, (h,w), angle, trans, scale, shear)\n",
-        "        params_tmp = torch.fft.rfftn(img_tmp, s=[h,w], dim=[2,3], norm='ortho')\n",
-        "        params_tmp = torch.view_as_real(params_tmp)\n",
+        "      if type(params_tmp) is not torch.complex64:\n",
+        "        params_tmp = torch.view_as_complex(params_tmp)\n",
+        "      img_tmp = torch.fft.irfftn(params_tmp, s=(h,w), norm='ortho')\n",
+        "      if DepthStrength != 0:\n",
+        "        img_tmp = depth_transform(img_tmp, depth_infer, depth_mask, size, DepthStrength, scale, trans, colors, depthdir, glob_step)\n",
+        "      img_tmp = frame_transform(img_tmp, (h,w), angle, trans, scale, shear)\n",
+        "      params_tmp = torch.fft.rfftn(img_tmp, s=[h,w], dim=[2,3], norm='ortho')\n",
+        "      params_tmp = torch.view_as_real(params_tmp)\n",
         "\n",
         "      params, image_f, _ = fft_image([1,3,h,w], resume=params_tmp, sd=1.)\n",
         "\n",
@@ -733,12 +737,13 @@
         "        loss += abs(img_out.std((2,3)) - 0.17).sum() # fix contrast\n",
         "\n",
         "      if txt_enc is not None:\n",
-        "        loss -= sim_func(txt_enc, out_enc, similarity_function)\n",
+        "        for enc, wt in txt_enc:\n",
+        "          loss -= wt * sim_func(enc, out_enc, similarity_function)\n",
         "      if styl_enc is not None:\n",
-        "        loss -= style_power * sim_func(styl_enc, out_enc, similarity_function)\n",
+        "        for enc, wt in styl_enc:\n",
+        "          loss -= style_power * wt * sim_func(enc, out_enc, similarity_function)\n",
         "      if sharpness != 0: # mode = scharr|sobel|naive\n",
         "        loss -= sharpness * derivat(img_out, mode='naive')\n",
-        "        # loss -= sharpness * derivat(img_sliced, mode='scharr')\n",
         "      if enforce != 0:\n",
         "        img_sliced = slice_imgs([image_f(noise, fixcontrast=resume)], samples, modsize, trform_f, align, macro)[0]\n",
         "        out_enc2 = model_clip_.encode_image(img_sliced)\n",
