--- a/IllusTrip3D.ipynb
+++ b/IllusTrip3D.ipynb
@@ -298,9 +298,9 @@
         "style_power = 1.\n",
         "samples = 200\n",
         "save_step = 1\n",
-        "learning_rate = 1.\n",
-        "optimizer = 'adam'\n",
-        "aug_transform = 'custom'\n",
+        "learning_rate = 0.1\n",
+        "optimizer = 'adam_custom'\n",
+        "aug_transform = 'fast'\n",
         "similarity_function = 'mixed'\n",
         "macro = 0.4\n",
         "enforce = 0.\n",
