colab version fix

--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -76,8 +76,7 @@
       "source": [
         "#@title General setup\n",
         "\n",
-        "# !pip install torchtext==0.8.0 torch==1.7.1 pytorch-lightning==1.2.2 torchvision==0.8.2 ftfy==5.8 regex\n",
-        "!pip install ftfy==5.8 transformers==4.6.0\n",
+        "!pip install ftfy transformers\n",
         "!pip install gputil ffpb \n",
         "\n",
         "import os\n",
