--- a/IllusTrip3D.ipynb
+++ b/IllusTrip3D.ipynb
@@ -63,7 +63,7 @@
       "source": [
         "#@title General setup\n",
         "\n",
-        "!pip install ftfy==5.8 transformers\n",
+        "!pip install ftfy transformers\n",
         "!pip install gputil ffpb \n",
         "\n",
         "# !apt-get -qq install ffmpeg\n",
