--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -56,7 +56,7 @@
       "source": [
         "#@title General setup\n",
         "\n",
-        "!pip install ftfy==5.8 transformers==4.6.0\n",
+        "!pip install ftfy transformers\n",
         "!pip install gputil ffpb \n",
         "\n",
         "# !apt-get -qq install ffmpeg\n",
