--- a/CLIP_VQGAN.ipynb
+++ b/CLIP_VQGAN.ipynb
@@ -77,7 +77,7 @@
         "VQGAN_model = \"gumbel_f8-8192\" #@param ['gumbel_f8-8192', 'imagenet_f16-1024', 'imagenet_f16-16384']\n",
         "resume = False #@param {type:\"boolean\"}\n",
         "\n",
-        "!pip install ftfy==5.8 transformers\n",
+        "!pip install ftfy transformers\n",
         "!pip install gputil ffpb \n",
         "\n",
         "import os\n",
